fixed scrolling issues in textarea when texts are too big

--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -40,7 +40,7 @@ body{
 
 .results--body{
   text-align: left;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .content--icon{
@@ -75,7 +75,6 @@ body{
 .results--body, .original--textarea{
   border: 1px solid #8d8d8d;
   background-color: #ffffff;
-  overflow: hidden;
 }
 
 .profanity{
